--- a/index.html
+++ b/index.html
@@ -5,72 +5,72 @@
   <meta charset="utf-8">
   <title>Data Dashboard</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-    crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   <header>
-    <figure class="logo">
-      <img src="assets/images/logo-laboratoria.svg" alt="">
-    </figure>
-
-    <!-- Seleccionar sede -->
     <div class="content-header">
+      <div class="container-logo">
+        <figure id="logo">
+            <img src="assets/images/logo-laboratoria.svg" alt="logo">
+        </figure>
+      </div>
       <select id="selection" class="selection">
         <!-- Le pongo ese valor para poder atrapar ese valor desde javascript -->
         <option value="LIM-2016-2">Lima 2016 - II</option>
         <option value="LIM-2017-1">Lima 2017 - I</option>
         <option value="LIM-2017-2" selected="true">Lima 2017 - II</option>
-
+  
         <option value="AQP-2016-2">Arequipa 2016 - II</option>
         <option value="AQP-2017-1">Arequipa 2017 - I</option>
-
+  
         <option value="CDMX-2017-1">Ciudad de Mexico 2017 - I</option>
         <option value="CDMX-2017-2">Ciudad de Mexico 2017 - II</option>
-
+  
         <option value="SCL-2016-2">Santiago de Chile 2016 - II</option>
         <option value="SCL-2017-1">Santiago de Chile 2017 - I</option>
         <option value="SCL-2017-2">Santiago de Chile 2017 - II</option>
-
+  
       </select>
+      <!-- Tabs -->
+      <div class="box-tabs">
+        <div class="tab" data-content="0">Overview</div>
+        <div class="tab" data-content="1">Students</div>
+        <div class="tab" data-content="2">Teacher</div>
+      </div>
+    </div>
   </header>
 
   <!--sección del perfil del usuario-->
   <section id="user" class="user">
     <div class="user-name">
-      <img src="assets/images/user.jpg" alt="Alejandra Ramirez">
-      <div class="name">
-        <h3 class="name">Alejandra Ramirez</h3>
-        <h4>Training Manager</h4>
+        <img src="assets/images/user.jpg" alt="Alejandra Ramirez">
+        <div class="name">
+          <h3 class="name">Alejandra Ramirez</h3>
+          <h4 class="task">Training Manager</h4>
+        </div>
+        <hr>
       </div>
-    </div>
-    <div class="home">
-      <i class="fa fa-home" aria-hidden="true"></i>
-      <h4>Home</h4>
-    </div>
-    <div class="tables">
-      <i class="fa fa-table" aria-hidden="true"></i>
-      <h4>Tables</h4>
-    </div>
-    <div class="calendar">
-      <i class="fa fa-calendar" aria-hidden="true"></i>
-      <h4>Calendar</h4>
-    </div>
-    <div class="out">
-      <i class="fa fa-sign-out" aria-hidden="true"></i>
-      <h4>Sign out</h4>
+      <div class="home">
+        <i class="fa fa-home" aria-hidden="true"></i>
+        <h4>Home</h4>
+      </div>
+      <div class="tables">
+        <i class="fa fa-table" aria-hidden="true"></i>
+        <h4>Tables</h4>
+      </div>
+      <div class="calendar">
+        <i class="fa fa-calendar" aria-hidden="true"></i>
+        <h4>Calendar</h4>
+      </div>
+      <div class="out">
+        <i class="fa fa-sign-out" aria-hidden="true"></i>
+        <h4>Sign out</h4>
     </div>
   </section>
-
-  <!-- Tabs -->
-  <div class="box-tabs">
-    <div class="tab" data-content="0">Overview</div>
-    <div class="tab" data-content="1">Students</div>
-    <div class="tab" data-content="2">Teacher</div>
-  </div>
-  </div>
+  
   <!-- Información de los datos -->
   <section class="content-sede">
     <div class="container">
@@ -84,6 +84,7 @@
                 <div id="students-inscribed" class="cajita">#</div>
                 <!-- Aca ira el % las estudiantes que desertaron -->
                 <div id="students-deserted" class="cajita">%</div>
+                <!-- Aca ira el grafico-->
                 <div id="graph-enrollment" class="graphs"></div>
               </div>
             </div>
@@ -93,66 +94,66 @@
                 <!-- Aca ira el total de estudiantes que pasaron el 70% (tech y hse) -->
                 <div id="students-approved" class="cajita">#</div>
                 <div id="total-approved" class="cajita">%</div>
+                <!-- Aca ira el grafico-->
                 <div id="graph-achievement" class="graphs"></div>
               </div>
             </div>
+            <div class="col">
+              <div class="box">
+                <h1>Net Promoter Score</h1>
+                <div id="average" class="cajita">%</div>
+                <div id="average-total" class="cajita description"></div>
+              </div>
+            </div>
           </div>
-          <div class="col">
-            <div class="box">
-              <h1>Net Promoter Score</h1>
-              <div id="average" class="cajita">%</div>
-              <div id="average" class="cajita description">60% Promoters
-                <br> 30% Passive
-                <br> 10% Detractors</div>
+          <div class="section tech">
+            <h1>Tech</h1>
+            <!-- Total de estudiantes que superan la meta tech -->
+            <div id="approved-tech" class="cajita">#</div>
+            <div id="average-tech" class="cajita">%</div>
+          </div>
+          <div class="section hse">
+            <h1>Hse</h1>
+            <!-- Total de estudiantes que superan la meta hse -->
+            <div id="approved-hse" class="cajita">#</div>
+            <div id="average-hse" class="cajita">%</div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="box">
+                <h1>Student satisfaction</h1>
+                <div id="average-satisfied" class="cajita">#</div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="box">
+                <h1>Teacher rating</h1>
+                <div id="scores-teacher"  class="cajita number">#</div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="box">
+                <h1>Jedi master rating</h1>
+                <div id="scores-jedi" class="cajita porcentaje">%</div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="section tech">
-          <h1>Tech</h1>
-          <!-- Total de estudiantes que superan la meta tech -->
-          <div id="approved-tech" class="cajita">#</div>
-          <div id="average-tech" class="cajita">%</div>
+        <div class="content">
+          Contenido de Students
         </div>
-        <div class="section hse">
-          <h1>Hse</h1>
-          <!-- Total de estudiantes que superan la meta hse -->
-          <div id="approved-hse" class="cajita">#</div>
-          <div id="average-hse" class="cajita">%</div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <div class="box">
-              <h1>Student satisfaction</h1>
-              <div id="average-satisfied" class="cajita">#</div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="box">
-              <h1>Teacher rating</h1>
-              <div id="scores-teacher" class="cajita number">#</div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="box">
-              <h1>Jedi master rating</h1>
-              <div id="scores-jedi" class="cajita porcentaje">%</div>
-            </div>
-          </div>
-        </div>
+        <div class="content">Contenido de Teachers</div>
       </div>
-      <div class="content">
-        Contenido de Students
-      </div>
-      <div class="content">Contenido de Teachers</div>
-    </div>
     </div>
   </section>
-  <!-- Google Charts -->
-  <script src="https://www.gstatic.com/charts/loader.js" type="text/javascript"></script>
   <!-- Base de datos -->
+  <section id = 'myPieChart'>
+
+  </section>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript"></script>
   <script src="./js/data.js"></script>
   <!-- Aquí va tus archivos JS -->
   <script src="./js/app.js"></script>
 </body>
-
 </html>
